--- a/formulario_contacto.html
+++ b/formulario_contacto.html
@@ -20,8 +20,37 @@
         <a class="navegacion_enlace navegacion_enlace--activo" href="formulario_contacto.html">CONTACTÁNOS</a>
     </nav>
 
+    <h1>CONTACTÁNOS</h1>
+
+    <div class="imagen_fondo"></div>
+
     <main>
-        <h1>CONTACTÁNOS</h1>
+        <form class="formulario">
+            <div class="campo">
+                <label for="nombres" >NOMBRES: </label>
+                <input class="items" type="text" name="Nombres" id="nombres" placeholder="Ingrese sus nombres">
+            </div>
+            
+            <div class="campo">
+                <label for="apellidos" class="campo_label">APELLIDOS: </label>
+                <input class="items" type="text" name="Apellidos" id="apellidos" placeholder="Ingrese sus apellidos">
+            </div>
+
+            <div class="campo">
+                <label for="correo" class="campo_label">CORREO: </label>
+                <input class="items" type="email" name="Correo" id="correo" placeholder="Ingrese su correo electronico">
+            </div>
+
+            <div class="campo">
+                <label for="mensaje" class="campo_label">MANGA A SOLICITAR: </label>
+                <textarea id="mensaje" class="items campo_label_txtArea"></textarea>
+            </div>
+
+            <div>
+                <input class="boton" type="submit" name="Enviar" id="enviar">
+                <input class="boton" type="reset" name="Borrar Todo" id="delete">
+            </div>
+        </form>
 
     </main>
 
