Colores Corregidos en todos los archivos

--- a/formulario_contacto.html
+++ b/formulario_contacto.html
@@ -20,7 +20,7 @@
         <a class="navegacion_enlace navegacion_enlace--activo" href="formulario_contacto.html">CONTACTÁNOS</a>
     </nav>
 
-    <h1>CONTACTÁNOS</h1>
+    <h1>¿NO ENCUENTRAS TU MANGA FAVORITO? CONTÁCTANOS!</h1>
 
     <div class="imagen_fondo"></div>
 
@@ -43,12 +43,12 @@
 
             <div class="campo">
                 <label for="mensaje" class="campo_label">MANGA A SOLICITAR: </label>
-                <textarea id="mensaje" class="items campo_label_txtArea"></textarea>
+                <textarea id="mensaje" class="items campo_label_txtArea" placeholder="¿Que manga buscabas? Ingresa su nombre, volumen, editorial, etc..."></textarea>
             </div>
 
             <div>
                 <input class="boton" type="submit" name="Enviar" id="enviar">
-                <input class="boton" type="reset" name="Borrar Todo" id="delete">
+                <input class="boton boton_reset" type="reset" name="Borrar Todo" id="delete">
             </div>
         </form>
 
