--- a/nosotros.html
+++ b/nosotros.html
@@ -20,9 +20,84 @@
         <a class="navegacion_enlace" href="formulario_contacto.html">CONTACTÁNOS</a>
     </nav>
 
-    <main>
-        <h1>SOBRE NOSOTROS</h1>
+    <main class="contenedor">
+        <h1>NUESTRO EMPRENDIMIENTO</h1>
+
+        <div class="nosotros">
+            <div class="nosotros_contenido">
+                <p>NekoMangaStore no comenzó como un negocio, sino como el sueño compartido de un grupo de jóvenes universitarios apasionados por el manga y el anime. Todo comenzó en los pasillos de nuestra universidad, donde nos reuníamos para discutir nuestros mangas favoritos, intercambiar recomendaciones y compartir nuestra emoción por las últimas series y lanzamientos.</p>
+                <p>Luego de varios desafíos, finalmente, en 2024, nuestra empresa se convirtió en una realidad. Desde entonces, hemos crecido y evolucionado, pero nuestra dedicación a nuestra comunidad de fanáticos del manga nunca ha cambiado. Seguimos siendo un equipo de jóvenes universitarios apasionados, y cada día nos esforzamos por compartir nuestra pasión con el mundo y brindar la mejor experiencia posible a nuestros clientes.</p>
+            </div>
+
+            <img class="nosotros_imagen" src="Nosotros_Temporal.jpg" alt="imagen_nosotros">
+        </div>
     </main>
+
+    <section class="contenedor comprar">
+        <h2 class="comprar_titulo">¿PORQUÉ ADQUIRIR TUS MANGAS FAVORITOS CON NOSOTROS?</h2>
+
+        <div class="bloques">
+            <div class="bloque">
+                <p>
+                    <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-receipt-2" width="100" height="100" viewBox="0 0 24 24" stroke-width="1.5" stroke="#ffbf00" fill="none" stroke-linecap="round" stroke-linejoin="round">
+                        <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
+                        <path d="M5 21v-16a2 2 0 0 1 2 -2h10a2 2 0 0 1 2 2v16l-3 -2l-2 2l-2 -2l-2 2l-2 -2l-3 2" />
+                        <path d="M14 8h-2.5a1.5 1.5 0 0 0 0 3h1a1.5 1.5 0 0 1 0 3h-2.5m2 0v1.5m0 -9v1.5" />
+                      </svg>
+                </p>
+
+                <h3 class="bloque_titulo">EL MEJOR PRECIO</h3>
+                <p></p>
+            </div>
+
+            <div class="bloque">
+                <p>
+                    <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-yin-yang" width="100" height="100" viewBox="0 0 24 24" stroke-width="1.5" stroke="#ffbf00" fill="none" stroke-linecap="round" stroke-linejoin="round">
+                        <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
+                        <path d="M12 12m-9 0a9 9 0 1 0 18 0a9 9 0 1 0 -18 0" />
+                        <path d="M12 3a4.5 4.5 0 0 0 0 9a4.5 4.5 0 0 1 0 9" />
+                        <circle cx="12" cy="7.5" r=".5" fill="currentColor" />
+                        <circle cx="12" cy="16.5" r=".5" fill="currentColor" />
+                      </svg>
+                </p>
+
+                <h3 class="bloque_titulo">CONFIABILIDAD</h3>
+                <p></p>
+            </div>
+
+            <div class="bloque">
+                <p>
+                    <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-lock-square-rounded" width="100" height="100" viewBox="0 0 24 24" stroke-width="1.5" stroke="#ffbf00" fill="none" stroke-linecap="round" stroke-linejoin="round">
+                        <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
+                        <path d="M12 3c7.2 0 9 1.8 9 9s-1.8 9 -9 9s-9 -1.8 -9 -9s1.8 -9 9 -9z" />
+                        <path d="M8 11m0 1a1 1 0 0 1 1 -1h6a1 1 0 0 1 1 1v3a1 1 0 0 1 -1 1h-6a1 1 0 0 1 -1 -1z" />
+                        <path d="M10 11v-2a2 2 0 1 1 4 0v2" />
+                      </svg>
+                </p>
+
+                <h3 class="bloque_titulo">SEGURIDAD</h3>
+                <p></p>
+            </div>
+
+            <div class="bloque">
+                <p>
+                    <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-brand-chrome" width="100" height="100" viewBox="0 0 24 24" stroke-width="1.5" stroke="#ffbf00" fill="none" stroke-linecap="round" stroke-linejoin="round">
+                        <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
+                        <path d="M12 12m-9 0a9 9 0 1 0 18 0a9 9 0 1 0 -18 0" />
+                        <path d="M12 12m-3 0a3 3 0 1 0 6 0a3 3 0 1 0 -6 0" />
+                        <path d="M12 9h8.4" />
+                        <path d="M14.598 13.5l-4.2 7.275" />
+                        <path d="M9.402 13.5l-4.2 -7.275" />
+                      </svg>
+                </p>
+
+                <h3 class="bloque_titulo">DIVERSIFICACION</h3>
+                <p></p>
+            </div>
+        </div>
+
+
+    </section>
 
     <footer class="footer">
         <p class="footer_texto">NekoMangaStore - Todos los derechos reservados 2024.</p>
