--- a/nosotros.html
+++ b/nosotros.html
@@ -110,7 +110,7 @@
                         <path d="M7 10v4h3v7h4v-7h3l1 -4h-4v-2a1 1 0 0 1 1 -1h3v-4h-3a5 5 0 0 0 -5 5v2h-3" />
                       </svg>
                 </p>
-                <a class="footer_texto_red" href="">Facebook</a>
+                <a class="footer_texto_red" href="https://www.facebook.com/" target="_blank">Facebook</a>
             </div>
     
             <div class="footer_content">
@@ -122,7 +122,7 @@
                         <path d="M16.5 7.5l0 .01" />
                      </svg>
                 </p>
-                <a class="footer_texto_red" href="">Instagram</a>
+                <a class="footer_texto_red" href="https://www.instagram.com/" target="_blank">Instagram</a>
             </div>
     
             <div class="footer_content">
@@ -133,7 +133,7 @@
                         <path d="M9 10a.5 .5 0 0 0 1 0v-1a.5 .5 0 0 0 -1 0v1a5 5 0 0 0 5 5h1a.5 .5 0 0 0 0 -1h-1a.5 .5 0 0 0 0 1" />
                       </svg>
                 </p>
-                <a class="footer_texto_red" href="">Whatsapp</a>
+                <a class="footer_texto_red" href="https://www.whatsapp.com" target="_blank">Whatsapp</a>
             </div>
         </div>
     </footer>
