--- a/login.html
+++ b/login.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contactanos</title>
+    <title>Tu Cuenta</title>
     <link rel="stylesheet" href="normalize.css">
-    <link rel="stylesheet" href="style_formulario.css">
+    <link rel="stylesheet" href="style_login.css">
 </head>
 <body>
     <header class="header">
@@ -17,41 +17,11 @@
     <nav class="navegacion">
         <a class="navegacion_enlace" href="index.html">TIENDA</a>
         <a class="navegacion_enlace" href="nosotros.html">NOSOTROS</a>
-        <a class="navegacion_enlace navegacion_enlace--activo" href="formulario_contacto.html">CONTACTÁNOS</a>
-        <a class="navegacion_enlace" href="login.html">TU CUENTA</a>
+        <a class="navegacion_enlace" href="formulario_contacto.html">CONTACTÁNOS</a>
+        <a class="navegacion_enlace navegacion_enlace--activo" href="login.html">TU CUENTA</a>
     </nav>
 
-    <h1>¿NO ENCUENTRAS TU MANGA FAVORITO? CONTÁCTANOS!</h1>
-
-    <div class="imagen_fondo"></div>
-
     <main>
-        <form class="formulario">
-            <div class="campo">
-                <label for="nombres" >NOMBRES: </label>
-                <input class="items" type="text" name="Nombres" id="nombres" placeholder="Ingrese sus nombres">
-            </div>
-            
-            <div class="campo">
-                <label for="apellidos" class="campo_label">APELLIDOS: </label>
-                <input class="items" type="text" name="Apellidos" id="apellidos" placeholder="Ingrese sus apellidos">
-            </div>
-
-            <div class="campo">
-                <label for="correo" class="campo_label">CORREO: </label>
-                <input class="items" type="email" name="Correo" id="correo" placeholder="Ingrese su correo electronico">
-            </div>
-
-            <div class="campo">
-                <label for="mensaje" class="campo_label">MANGA A SOLICITAR: </label>
-                <textarea id="mensaje" class="items campo_label_txtArea" placeholder="¿Que manga buscabas? Ingresa su nombre, volumen, editorial, etc..."></textarea>
-            </div>
-
-            <div>
-                <input class="boton" type="submit" name="Enviar" id="enviar">
-                <input class="boton boton_reset" type="reset" name="Borrar Todo" id="delete">
-            </div>
-        </form>
 
     </main>
 
