--- a/formulario_contacto.html
+++ b/formulario_contacto.html
@@ -28,7 +28,7 @@
     <main>
         <form class="formulario">
             <div class="campo">
-                <label for="nombres" >NOMBRES: </label>
+                <label for="nombres" class="campo_label">NOMBRES: </label>
                 <input class="items" type="text" name="Nombres" id="nombres" placeholder="Ingrese sus nombres">
             </div>
             
