--- a/login.html
+++ b/login.html
@@ -48,6 +48,10 @@
                 <div>
                     <input class="input input_boton" type="submit" value="Ingresar">
                 </div>
+
+                <div class="formulario_register">
+                    <a href="">No tienes una cuenta? Registrate!</a>
+                </div>
             </form>
         </div>
     </section>
