Campos de requerimiento, nada novedoso

--- a/formulario_contacto.html
+++ b/formulario_contacto.html
@@ -28,18 +28,18 @@
     <main>
         <form class="formulario">
             <div class="campo">
-                <label for="nombres" class="campo_label">NOMBRES: </label>
-                <input class="items" type="text" name="Nombres" id="nombres" placeholder="Ingrese sus nombres">
+                <label for="nombres" class="campo_label">NOMBRES*: </label>
+                <input class="items" type="text" name="Nombres" id="nombres" placeholder="Ingrese sus nombres" required>
             </div>
             
             <div class="campo">
-                <label for="apellidos" class="campo_label">APELLIDOS: </label>
-                <input class="items" type="text" name="Apellidos" id="apellidos" placeholder="Ingrese sus apellidos">
+                <label for="apellidos" class="campo_label">APELLIDOS*: </label>
+                <input class="items" type="text" name="Apellidos" id="apellidos" placeholder="Ingrese sus apellidos" required>
             </div>
 
             <div class="campo">
-                <label for="correo" class="campo_label">CORREO: </label>
-                <input class="items" type="email" name="Correo" id="correo" placeholder="Ingrese su correo electronico">
+                <label for="correo" class="campo_label">CORREO*: </label>
+                <input class="items" type="email" name="Correo" id="correo" placeholder="Ingrese su correo electronico" required>
             </div>
 
             <div class="campo">
@@ -52,8 +52,8 @@
             </div>
 
             <div class="campo">
-                <label for="mensaje" class="campo_label">MANGA A SOLICITAR: </label>
-                <textarea id="mensaje" class="items campo_label_txtArea" placeholder="¿Que manga buscabas? Ingresa su nombre, volumen, editorial, etc..."></textarea>
+                <label for="mensaje" class="campo_label">MANGA A SOLICITAR*: </label>
+                <textarea id="mensaje" class="items campo_label_txtArea" placeholder="¿Que manga buscabas? Ingresa su nombre, volumen, editorial, etc..." required></textarea>
             </div>
 
             <div class="campo">
